--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=service-tasks
 spring.cloud.config.uri=http://localhost:8888/config
 spring.config.import=configserver:http://localhost:8888/config
+
 eureka.client.service-url.defaultZone=http://localhost:8888/eureka
+eureka.instance.prefer-ip-address=false
+
 spring.datasource.url=jdbc:h2:mem:tasks
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
