--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.config.import=configserver:http://localhost:8888/config
 
 eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
 
 spring.datasource.url=jdbc:h2:mem:tasks
 spring.datasource.driver-class-name=org.h2.Driver
